photos extension changed

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body >
     <div class="logo">
-        <a href="https://www.iitm.ac.in/campus-life/sports"><img src="IITM.png" alt="SOC logo" content="hi"></a> 
+        <a href="https://www.iitm.ac.in/campus-life/sports"><img src="IITM.webp" alt="SOC logo" content="hi"></a> 
     </div>
     <div class="container">
         
